fix(video): removed overflow on suggestions

--- a/public/css/classea12.css
+++ b/public/css/classea12.css
@@ -1185,4 +1185,9 @@ progress {
   .comment_link {
     font-size: 1.2rem;
   }
+
+  .video_suggestion {
+    overflow: unset;
+    max-height: 100%;
+  }
 }
